Add groovy plugin and mavenLocal and mavenCentral repositories

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 plugins {
     id 'java-gradle-plugin'
+    id 'groovy'
 }
 
 repositories {
+    mavenLocal()
+    mavenCentral()
     jcenter()
 }
 
