--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ jdk:
     - openjdk11
     - openjdk12
 
-node_js: "13.7.0"
-
 git:
     depth: false
 
 before_install:
+    - nvm use 13
     - npm install -g @angular/cli
 
 # --------------- Gradle Cache ---------------
