--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'de.clashsoft'
-version = 'git describe --tags'.execute().text[1..-2] // strip v and \n
+version = 'git describe --tags'.execute([], rootDir).text[1..-2] // strip v and \n
 description = 'Integrate Angular frontends into your Gradle build.'
 
 pluginBundle {
